modific and added FileReaderImpl.java, finalReport.csv and Main.java