@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileReaderImpl implements FileReader {
 
@@ -13,7 +12,7 @@ public class FileReaderImpl implements FileReader {
     public List<String> read(String filePath) {
         try {
             return Files.readAllLines(Paths.get(filePath)).stream()
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new RuntimeException("Error reading file from path: " + filePath, e);
         }
